--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -175,7 +175,7 @@ form, form div, input { display: inline; }
   letter-spacing: 2px;
 	max-width: 500px;
 	text-align: center;
-	margin: 50px auto;
+	margin: 50px auto 0;
 	text-transform: none;
   opacity: 0.7;
   @media screen and (max-width: 1023px){
